P46-P48,网关，跨域，展示三级分类

--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
     url: jdbc:mysql://192.168.253.128:3306/gulimall_pms
     username: root
     password: root
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+  application:
+    name: gulimall-product
 
 mybatis-plus:
   global-config:
